# TrainScheduling

./: run_with_log_new.ps1
cpp_cg/: .gitignore  CMakeLists.txt  README.md
cpp_cg/src/: main.cpp
data/input_data/: Schedule-fs.xml  Schedule-wx.xml  cs2_xroad.xml  佛山1.xml  佛山2.xml  佛山3.xml  佛山3_old.xml  佛山3_test.xml  无锡1.xml  无锡2.xml  长沙4_大小交路.xml
express_local_V3/: FOLDER_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README_START_HERE.md  VERSION_HISTORY.md  __init__.py  main.py  requirements.txt  使用指南_最终版.md  版本对比_优化前后.md  越行功能集成完成报告.md  越行功能验证报告.md  越行时间验证.md
express_local_V3/algorithms/: __init__.py  connection_manager.py  express_local_generator.py  headway_optimizer.py  overtaking_detector.py  timetable_builder.py
express_local_V3/docs/: CHANGELOG.md  CRITICAL_FIX_OPTIMIZER_INTEGRATION.md  EXPRESS_DESTCODE_FIX_V2.md  EXPRESS_LOCAL_MODEL_DESIGN.md  EXPRESS_SKIP_STOP_SUMMARY.md  FILE_REORGANIZATION_2025-10-13.md  FINAL_VERIFICATION.md  INDEX.md  (+34 more)
src/: AdjRcd_Rule.py  AdjRcd_infeasible.py  CarInfo.py  ConflictPair.py  DataReader.py  DepotRoutesInfo.py  Engineering.py  IntervalRecorder.py  OptDay.py  OptInterface.py  Path.py  Peak.py  PhaseTime.py  Platform.py  Pulp.py  RailInfo.py  Route.py  RouteSolution.py  Solution.py  Station.py  TurnBackInfo.py  Turnback.py  UserSetting.py  Util.py  get_opt_rcd.py  main.py
tools/: coinmp_bridge_common.py  export_cg_instance.py  export_cg_solution_excel.py  persistent_coinmp_master_session.py  persistent_gurobi_master_session.py  solve_master_with_coinmp.py  solve_master_with_gurobi.py  timetable_circulation_decomp.py
(+54 files in other folders)
